Added homepage & footer links

--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -7,46 +7,41 @@
           <li>
             <span class="footer__wrapper-inner-menu-separator">Features</span>
             <ul>
-              <li><a href="#">Test native mobile app</a></li>
-              <li><a href="#">Developer Experience</a></li>
-              <li><a href="#">One framework for all</a></li>
-              <li><a href="#">Test for real users</a></li>
-              <li><a href="#">Built on web standards</a></li>
+              <li><a href="/guide/mobile-app-testing/introduction.html">Test native mobile app</a></li>
+              <li><a href="/about/highlights/developer-experience.html">Developer Experience</a></li>
+              <li><a href="/about/highlights/beyond-e2e.html">Go beyond E2E</a></li>
+              <li><a href="/about/highlights/types-of-testing.html">Multiple testing types</a></li>
             </ul>
           </li>
           <li>
             <span class="footer__wrapper-inner-menu-separator">Resources</span>
             <ul>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Discussions</a></li>
-              <li><a href="#">Chat with us</a></li>
-              <li><a href="#">Stack Overflow</a></li>
-              <li><a href="#">Report Issues</a></li>
+              <li><a href="/about/community/">Community</a></li>
+              <li><a href="https://github.com/nightwatchjs/nightwatch/discussions">Discussions</a></li>
+              <li><a href="https://discord.gg/SN8Da2X">Chat with us</a></li>
+              <li><a href="https://stackoverflow.com/questions/tagged/nightwatch.js">Stack Overflow</a></li>
+              <li><a href="https://github.com/nightwatchjs/nightwatch/issues">Report Issues</a></li>
             </ul>
           </li>
           <li>
             <span class="footer__wrapper-inner-menu-separator">Docs</span>
             <ul>
-              <li><a href="#">What is Nightwatch?</a></li>
-              <li><a href="#">Set up Nightwatch</a></li>
-              <li><a href="#">Start with VS code</a></li>
-              <li><a href="#">Run your first Test</a></li>
-              <li><a href="#">Test on mobile devices</a></li>
-              <li><a href="#">Test on simulators</a></li>
-              <li><a href="#">API reference</a></li>
-              <li><a href="/guide">Guide</a></li>
-              <li><a href="#">Config settings</a></li>
+              <li><a href="/guide/overview/what-is-nightwatch.html">What is Nightwatch?</a></li>
+              <li><a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html">Run your first Test</a></li>
+              <li><a href="https://marketplace.visualstudio.com/items?itemName=browserstackcom.nightwatch#:~:text=The%20Nightwatch%20Extension%20for%20Visual,in%20a%20single%2C%20integrated%20environment.html">Start with VS code</a></li>
+              <li><a href="/guide/mobile-app-testing/introduction.html">Test on mobile devices</a></li>
+              <li><a href="/api/">API reference</a></li>
+              <li><a href="/guide/">Guide</a></li>
+              <li><a href="/guide/configuration/nightwatch-configuration-file.html">Config settings</a></li>
             </ul>
           </li>
           <li>
             <span class="footer__wrapper-inner-menu-separator">Nightwatch</span>
             <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Newsletter</a></li>
-              <li><a href="#">How to Contribute?</a></li>
-              <li><a href="#">Release History</a></li>
-              <li><a href="#">Integrations Plugins</a></li>
+              <li><a href="/about/">About</a></li>
+              <li><a href="/blog/">Blog</a></li>
+              <li><a href="/about/contribute/">How to Contribute?</a></li>
+              <li><a href="/guide/overview/whats-new.html">Release History</a></li>
             </ul>
           </li>
         </ul>
@@ -291,12 +286,12 @@
       </div>
       <div class="footer__wrapper-bottom-text">
         <p class="footer__wrapper-bottom-text-about">Nightwatch was established in 2014 and since 2021 it is
-          actively maintained at <a href="#" target="_blank" rel="noopener noreferrer">BrowserStack</a> with the
+          actively maintained at <a href="https://browserstack.com/" target="_blank" rel="noopener noreferrer">BrowserStack</a> with the
           help
-          of all our <a href="#" target="_blank" rel="noopener noreferrer">contributors</a>.</p>
-        <p class="footer__wrapper-bottom-text-copywright">&copy; 2023 <a href="#" target="_blank"
+          of all our <a href="https://github.com/nightwatchjs/nightwatch/graphs/contributors" target="_blank" rel="noopener noreferrer">contributors</a>.</p>
+        <p class="footer__wrapper-bottom-text-copywright">&copy; 2023 <a href="https://browserstack.com/" target="_blank"
             rel="noopener noreferrer">BrowserStack</a> Limited • Code licensed under the
-          <a href="#" target="_blank" rel="noopener noreferrer">MIT License</a>.
+          <a href="https://github.com/nightwatchjs/nightwatch/blob/main/LICENSE.md" target="_blank" rel="noopener noreferrer">MIT License</a>.
         </p>
       </div>
     </div>
