--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -133,7 +133,7 @@ function activeLink(urlPart) {
             <p class="hero__action-copy-command-text">npm init nightwatch</p>
             <button class="hero__action-copy-command-button">Copy</button>
           </div>
-          <a href="#" class="hero__action-button--get-started">Get Started</a>
+          <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="hero__action-button--get-started">Get Started</a>
         </div>
 
         <div class="hero__companies" role="region" aria-label="social proof">
@@ -1343,7 +1343,7 @@ function activeLink(urlPart) {
                     without writing any test script.</li>
                 </ul>
               </div>
-              <a href="#" class="capabilities__card-button">Get Started
+              <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="capabilities__card-button">Get Started
                 <svg role="img" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
@@ -1410,7 +1410,7 @@ function activeLink(urlPart) {
                     baselines.</li>
                 </ul>
               </div>
-              <a href="#" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
+              <a href="/about/highlights/types-of-testing.html" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
                   <path
@@ -1545,7 +1545,7 @@ function activeLink(urlPart) {
                     Chai assertions.</li>
                 </ul>
               </div>
-              <a href="#" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
+              <a href="/about/highlights/beyond-e2e.html" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
                   <path
@@ -1822,7 +1822,7 @@ function activeLink(urlPart) {
             <p class="performance__content-description-text">Experience lightning-fast tests with Nightwatch
               irrespective
               of whether you run your tests on a single machine or multiple VMs.</p>
-            <a href="#" class="performance__content-description-button">Run Sample Test</a>
+            <a href="https://github.com/nightwatchjs/performance_benchmarking" class="performance__content-description-button">Run Sample Test</a>
           </div>
         </article>
 
@@ -2673,7 +2673,7 @@ function activeLink(urlPart) {
               <p class="call-to-action-content-action-copy-command-text">npm init nightwatch</p>
               <button class="call-to-action-content-action-copy-command-button">Copy</button>
             </div>
-            <a href="#" class="call-to-action-content-action-button--get-started">Get Started</a>
+            <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="call-to-action-content-action-button--get-started">Get Started</a>
           </div>
         </div>
       </section>
